--- a/src/components/date-input/date-input.css
+++ b/src/components/date-input/date-input.css
@@ -1,4 +1,5 @@
 .krds-date-input {
+  width: 100%;
   display: flex;
   flex-direction: column;
   gap: var(--krds-gap-2);
