--- a/src/components/file-upload/file-upload.css
+++ b/src/components/file-upload/file-upload.css
@@ -1,4 +1,5 @@
 .krds-file-upload {
+  width: 100%;
   display: flex;
   flex-direction: column;
   gap: var(--krds-gap-3);
