--- a/src/components/pagination/pagination.css
+++ b/src/components/pagination/pagination.css
@@ -1,4 +1,5 @@
 .krds-pagination {
+  width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
