--- a/src/components/step-indicator/step-indicator.css
+++ b/src/components/step-indicator/step-indicator.css
@@ -1,4 +1,5 @@
 .krds-step-wrap {
+  width: 100%;
   display: flex;
   align-items: center;
   list-style: none;
