--- a/src/components/structured-list/structured-list.css
+++ b/src/components/structured-list/structured-list.css
@@ -1,4 +1,5 @@
 .krds-structured-list {
+  width: 100%;
   display: flex;
   flex-direction: column;
   gap: var(--krds-gap-3);
