--- a/src/components/text-input/text-input.css
+++ b/src/components/text-input/text-input.css
@@ -1,4 +1,5 @@
 .form-group {
+  width: 100%;
   display: flex;
   flex-direction: column;
   gap: var(--krds-gap-2);
