--- a/src/components/textarea/textarea.css
+++ b/src/components/textarea/textarea.css
@@ -1,4 +1,5 @@
 .textarea-wrap {
+  width: 100%;
   position: relative;
 }
 
